migrating aom.koto.gq to charo.koto.cc

--- a/src/components/Copyright.astro
+++ b/src/components/Copyright.astro
@@ -6,14 +6,15 @@
     <p style="font-size: larger;" set:html={SiteName}></p>
     <p>
         Powered by
-        <a href="https://astro.build/">Astro.js</a>,
+        <a href="https://astro.build/">Astro.js</a>&nbsp;|&nbsp;
         Theme for
-        <a href="https://github.com/qkqpttgf/OneManager-php">Onemanager</a>
+        <a href="https://github.com/qkqpttgf/OneManager-php">Onemanager</a>&nbsp;|&nbsp;
+        Under AGPL-3.0
     </p>
     <p>
-        <a href="https://github.com/ArmoLab/Onemanager-Theme-Charo">Theme Charo</a>
+        <a href="https://github.com/kobe-koto/Onemanager-Theme-Charo">Theme Charo</a>
         by
-        <a href="https://github.com/ArmoLab">ArmoLab Org</a>
+        <a href="https://github.com/kobe-koto">kobe-koto</a>
         , And you.
     </p>
 </div>
