--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -4,7 +4,7 @@
     <div class="IntroductionItem">
         <div class="IntroductionItemLeft">
             <h1>
-                The ArmoLab's Onemanager Theme <br />
+                A brand new OneManager theme <br />
                 <span style="font-size: larger;">Charo</span>
             </h1>
             <p>A Theme for Onemanager, written in Astro.</p>
@@ -18,7 +18,7 @@
     <br>
     <h2>In hurry? Let's have a <span class="Highlighted">Quick Start</span>.</h2>
     <h3>- Platform Setting =&gt; customTheme value: (still some bugs here)</h3>
-    <code>https://aom.koto.gq/allinone.html</code>
+    <code>https://charo.koto.cc/allinone.html</code>
     <h3>- Setting =&gt; Upgrade: (you better build it yourself)</h3>
     <code>Username: ArmoLab; Repo: Armo-Onemanager</code>
 </div>
