--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Copyright from "../components/Copyright.astro"
 		<meta name="description" content="A brand new OneManager theme: Charo." />
 		<meta name="description" content="A Theme for Onemanager, written in Astro." />
 		<meta name="generator" content={Astro.generator} />
-		<title>ArmoLab's Onemanager theme</title>
+		<title>Charo: brand new OneManager theme</title>
 		<script src="../assets/NavAutoHider.js"></script>
 	</head>
 	<body>
