--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import "../assets/base.css"
-import Nav from "../components/NavBar.astro"
-import Introduction from "../components/Introduction.astro"
-import Copyright from "../components/Copyright.astro"
+import Nav from "@components/NavBar.astro"
+import Introduction from "@components/Introduction.astro"
+import Copyright from "@components/Copyright.astro"
 ---
 
 <html lang="en">
