--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,7 +1,7 @@
 ---
 	import ThemeSwitcher from "./base/ThemeSwitcher.astro"
 	import MultiDisk from "./MultiDisk.astro"
-	import "../assets/header.css"
+	import "../assets/header.scss"
 	const { SiteName, IconURL } = Astro.props;
 	
 	// icons
@@ -11,13 +11,13 @@
 ---
 
 <header>
-	<span class="buttons left">
+	<span class="left">
 		<span onclick="SideBar.Open()" title="Open Sidebar.">
 			<Menu color="#f8f8ff"/>
 		</span>
 		<!--MultiDiskAreaStart-->
-			<span onclick="MultiDisk.Expand()" class="MultiDiskExpander" title="Open multi disk controller">
-				<ListItem color="#f8f8ff"/>
+			<span onclick="MultiDisk.Expand()" title="Open multi disk controller">
+				<span class="ExpandIcon" data-ControllerHidden="true"><ListItem color="#f8f8ff" /></span>
 			</span>
 		<!--MultiDiskAreaEnd-->
 	</span>
@@ -28,19 +28,17 @@
 			<img src={ IconURL } alt="">
 			<span set:html={ SiteName }></span>
     	</a>
-
-		<span data-desc="space-between"></span>
 		
-		<a class="CurrentDriveName NoUnderline" href="javascript:MultiDisk.Expand();">
+		<span onclick="MultiDisk.Expand();">
 			<!--MultiDiskAreaStart-->
 				<span id="DriveName">(CurrentDriveName)</span>
-				<span class="ExpandIcon"><ListItem color="#f8f8ff" /></span>
+				<span class="ExpandIcon" data-ControllerHidden="true"><ListItem color="#f8f8ff" /></span>
 			<!--MultiDiskAreaEnd-->
-		</a>
+		</span>
 
     </div>
 
-	<span class="buttons right">
+	<span class="right">
 		<span onclick="ThemeSwitcher.Switch();" title="Switch theme, light or dark">
 			<ThemeSwitcher />
 		</span>
@@ -49,6 +47,7 @@
 		</span>
 	</span>
 </header>
+
 <!--MultiDiskAreaStart-->
 <MultiDisk />
 <!--MultiDiskAreaEnd-->
