--- a/src/components/ToastNofication.astro
+++ b/src/components/ToastNofication.astro
@@ -1,5 +1,5 @@
 ---
-import IconCopy from "@icons/copy.astro"
+import { Icon } from "astro-icon";
 ---
 
 <div class="ToastCon">
@@ -8,7 +8,7 @@ import IconCopy from "@icons/copy.astro"
 
         <span class="Symbols">
             <span data-icon-id="copy">
-                <IconCopy color="#f8f8ff" />
+                <Icon name="heroicons:document-duplicate" />
             </span>
         </span>
 
