--- a/src/components/base/ThemeSwitcher.astro
+++ b/src/components/base/ThemeSwitcher.astro
@@ -1,14 +1,13 @@
 ---
-    import Moon from "../fa-icons/moon.astro";
-    import Sun from "../fa-icons/sun.astro";
+    import { Icon } from "astro-icon";
 ---
 
 <span class="ThemeSwitcher">
     <span id="MoonIcon" style="display: inline-block;">
-        <Moon color="#f8f8ff" />
+        <Icon name="heroicons:moon" />
     </span>
     <span id="SunIcon" style="display: none;">
-        <Sun color="#f8f8ff" />
+        <Icon name="heroicons:sun" />
     </span>
 </span>
 
