--- a/src/pages/allinone.astro
+++ b/src/pages/allinone.astro
@@ -1,5 +1,5 @@
 ---
-import "../assets/base.css"
+import "../assets/base.scss"
 
 // base Components
 import Divider from "../components/base/Divider.astro"
@@ -11,7 +11,7 @@ import PathBar from "../components/PathBar.astro"
 import IsFolder from "../components/IsFolder.astro"
 import IsFile from "../components/IsFile.astro"
 
-import Copyright from "components/Copyright.astro"
+import Copyright from "../components/Copyright.astro"
 ---
 
 <html lang="<!--constStr@language-->">
