--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import "../assets/base.css"
+import "../assets/base.scss"
 import Nav from "@components/NavBar.astro"
 import Introduction from "@components/Introduction.astro"
 import Copyright from "@components/Copyright.astro"
