--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -16,9 +16,14 @@ body {
     transition: all .45s ease;
     [astro-icon] {
         fill: #f8f8ff;
+        vertical-align: bottom;
 
         height: 20px;
         width: 20px;
+
+    }
+    [astro-icon="heroicons:chevron-down"] {
+        margin-bottom: -0.03rem;
     }
     
     &[theme="Light"] {
