--- a/src/components/IsFile.astro
+++ b/src/components/IsFile.astro
@@ -12,7 +12,7 @@ import { Icon } from "astro-icon";
         <!--FileEncodeUrl-->
     </code>
     <ButtonContainer href="<!--FileEncodeUrl-->">
-        <span><Icon name="heroicons:arrow-down-tray"/>&nbsp;Download<!--constStr@Download--></span>
+        <span><Icon name="heroicons:arrow-down-tray"/>&nbsp;<!--constStr@Download--></span>
     </ButtonContainer>
     <ButtonContainer href="<!--FileEncodeUrl-->">
         <span><Icon name="heroicons:document-duplicate" />&nbsp;Copy URL</span>
