--- a/src/components/IsFolder.astro
+++ b/src/components/IsFolder.astro
@@ -1,95 +1,88 @@
 ---
+import { Icon } from "astro-icon";
 import LinkContainer from "../components/base/LinkContainer.astro"
 import MorePage from "../components/MorePage.astro"
 ---
 
-    <div class="FolderDesc" id="<!--FolderId-->">
-        <div>
-            <!--constStr@File-->
-        </div>
-        <div style="width: 20%;text-align: right;">
-            <!--constStr@EditTime-->
-        </div>
-        <div style="width: 20%;text-align: right;">
-            <!--constStr@Size-->
-        </div>
+<div class="FolderDesc" id="<!--FolderId-->">
+    <div class="FileName">
+        <!--constStr@File-->
     </div>
+    <div style="width: 20%;text-align: right;" class="EditTime">
+        <!--constStr@EditTime-->
+    </div>
+    <div style="width: 20%;text-align: right;" class="Size">
+        <!--constStr@Size-->
+    </div>
+</div>
 
-
-
-    <!--FolderListStart-->
-    <div id="Folders">
-        <LinkContainer href="<!--FileEncodeReplaceUrl-->/">
-            <div class="ListItems">
-                <div data-FileId="<!--FileId-->">
-                    <!--FileEncodeReplaceName-->
-                </div>
-                <div>
-                    <!--lastModifiedDateTime-->
-                </div>
-                <div>
-                    <!--size-->
-                </div>
+<!--FolderListStart-->
+<div id="Folders">
+    <LinkContainer href="<!--FileEncodeReplaceUrl-->/">
+        <div class="ListItems">
+            <div data-FileId="<!--FileId-->">
+                <Icon name="heroicons:folder" />
+                <!--FileEncodeReplaceName-->
             </div>
-        </LinkContainer>
-    </div>
-    <!--FolderListEnd-->
-
-
-
-    <!--FileListStart-->
-    <div id="Files">
-        <LinkContainer href="<!--FileEncodeReplaceUrl-->?preview">
-            <div class="ListItems">
-                <div data-FileId="<!--FileId-->">
-                    <!--FileEncodeReplaceName-->
-                </div>
-    
-                <div>
-                    <!--lastModifiedDateTime-->
-                </div>
-    
-                <div>
-                    <!--size-->
-                </div>
-    
+            <div>
+                <!--lastModifiedDateTime-->
             </div>
-        </LinkContainer>
-    </div>
-    <!--FileListEnd-->
+            <div>
+                <!--size-->
+            </div>
+        </div>
+    </LinkContainer>
+</div>
+<!--FolderListEnd-->
 
-    <MorePage />
+<!--FileListStart-->
+<div id="Files">
+    <LinkContainer href="<!--FileEncodeReplaceUrl-->?preview">
+        <div class="ListItems">
+            <div data-FileId="<!--FileId-->">
+                <Icon name="heroicons:document" />
+                <!--FileEncodeReplaceName-->
+            </div>
+            <div>
+                <!--lastModifiedDateTime-->
+            </div>
+            <div>
+                <!--size-->
+            </div>
+        </div>
+    </LinkContainer>
+</div>
+<!--FileListEnd-->
+
+<!--MorePageStart-->
+<MorePage />
+<!--MorePageEnd-->
 
 
 
-<style>
-    .ListItems,
-    .FolderDesc {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
+<style lang="scss">
     .FolderDesc {
         margin: 0 16px;
     }
-
-    .ListItems div:nth-child(1),
-    .FolderDesc div:nth-child(1) {
-        text-align: left;
-        width: 50%;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
-    }
-    .ListItems div:nth-child(2),
-    .FolderDesc div:nth-child(2) {
-        width: 30%;
-        text-align: right;
-    }
-    .ListItems div:nth-child(3), 
-    .FolderDesc div:nth-child(3), {
-        width: 20%;
-        text-align: right;
+    .FolderDesc,
+    .ListItems {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        div:nth-child(1) {
+            text-align: left;
+            width: 50%;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+        div:nth-child(2) {
+            width: 30%;
+            text-align: right;
+        }
+        div:nth-child(3) {
+            width: 20%;
+            text-align: right;
+        }
     }
 </style>
