--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -5,7 +5,7 @@
         <div class="IntroductionItemLeft">
             <h1>
                 A brand new OneManager theme <br />
-                <span style="font-size: larger;">Charo</span>
+                <span style="font-size: larger;">Charo v2</span>
             </h1>
             <p>A Theme for Onemanager, written in Astro.</p>
         </div>
@@ -16,11 +16,9 @@
     <br>
     <br>
     <br>
-    <h2>In hurry? Let's have a <span class="Highlighted">Quick Start</span>.</h2>
-    <h3>- Platform Setting =&gt; customTheme value: (still some bugs here)</h3>
+    <h2>Let's have a <span class="Highlighted">Quick Start</span>.</h2>
+    <h3>- Platform Setting =&gt; customTheme value:</h3>
     <code>https://charo.koto.cc/allinone.html</code>
-    <h3>- Setting =&gt; Upgrade: (you better build it yourself)</h3>
-    <code>Username: ArmoLab; Repo: Armo-Onemanager</code>
 </div>
 
 <script lang="js">
