--- a/src/assets/header.scss
+++ b/src/assets/header.scss
@@ -15,13 +15,13 @@ header {
 
     /* size */
     width: 95vw;
-    padding: 8px 10px;
+    padding: 8px;
     box-sizing: border-box;
 
     /* apperence */
     transition: all .3s ease;
 
-    border-radius: 10px;
+    border-radius: 16px;
 
     background-color: rgba(35, 35, 35, .65);
     color: #f8f8ff;
