--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,13 +18,13 @@ import ToastNofication from "@components/ToastNofication.astro"
 		<title>Charo: brand new OneManager theme</title>
 	</head>
 	<body>
-		<Nav SiteName="Charo Homepage" IconURL="/aom-assets/images/fufu512.png" />
+		<Nav SiteName="Charo" IconURL="/aom-assets/images/fufu512.png" />
 
 		<ToastNofication />
 
 		<main>
 			<Introduction />
 		</main>
-		<Copyright SiteName="Charo Homepage" />
+		<Copyright SiteName="Charo" />
 	</body>
 </html>
