--- a/src/components/Copyright.astro
+++ b/src/components/Copyright.astro
@@ -1,6 +1,6 @@
 ---
 	const { SiteName } = Astro.props;
-	import { Icon } from "astro-icon";
+	import { Icon } from "astro-icon/components";
 	import ThemeSwitcher from "./base/ThemeSwitcher.astro";
 ---
 
