--- a/src/components/IsFile.astro
+++ b/src/components/IsFile.astro
@@ -1,6 +1,6 @@
 ---
 import ButtonContainer from "./base/ButtonContainer.astro";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 ---
 <div style="text-align: center; width=90%;margin: 0 auto; padding: 15px 5px;">
 
