--- a/src/components/MorePage.astro
+++ b/src/components/MorePage.astro
@@ -1,7 +1,7 @@
 ---
 // container
 import ButtonContainer from "./base/ButtonContainer.astro"
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 ---
 
 <form class="MorePage" action="" method="POST" id="nextpageform">
