--- a/src/components/IsFolder.astro
+++ b/src/components/IsFolder.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import LinkContainer from "../components/base/LinkContainer.astro"
 import MorePage from "../components/MorePage.astro"
 ---
